# AzureSphereRemoteX

./: .gitmodules
Client/: .gitignore  CMakeLists.txt  README.md  comms_manager.c  comms_manager.h
Client/applibs/: adc.h  gpio.h  i2c.h  pwm.h  remotex.h  spi.h  storage.h  uart.h
Client/src/: adc.c  gpio.c  i2c.c  pwm.c  remotex.c  spi.c  storage.c  uart.c
Examples/DesktopDevX/: .gitmodules  CMakeLists.txt  README.md  main.c  main.h
Examples/RemoteX/: .gitmodules  CMakeLists.txt  main.c
Server/: app_manifest.json
